--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
+    "sass": "^1.87.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
